# mal-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
rmal/: Cargo.toml  README.md
rmal/src/: client.rs  lib.rs  oauth2.rs  util.rs
rmal/src/api/: anime.rs  animelist.rs  mod.rs
rmal/src/api/model/: anime.rs  mod.rs  user.rs
rmal/src/auth/: mod.rs  token.rs
src/: app.rs  auth.rs  cli.rs  config.rs  lib.rs  main.rs  network.rs
src/api/: anime.rs  animelist.rs  manga.rs  mangalist.rs  mod.rs  objects.rs  user.rs
src/api/data/: anime.rs  manga.rs  user.rs
src/api/model/: anime.rs  manga.rs  mod.rs
src/auth/: cache.rs  mod.rs  redirect.rs
src/config/: app_config.rs  mod.rs  oauth_config.rs
src/event/: events.rs  key.rs  mod.rs
src/handlers/: anime.rs  common.rs  help.rs  input.rs  manga.rs  mod.rs  user.rs
src/ui/: help.rs  mod.rs  util.rs
