[package]
name = "mal_cli"
version = "0.1.0"
authors = ["SaeedAnas <saeedanas396@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mal"
path = "src/lib.rs"

[[bin]]
name = "mal"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
reqwest = "^0.10.6"
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
failure = "^0.1.8"
url = "^2.1.1"
