[package]
name = "rmal"
version = "0.1.0"
authors = ["anas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10.6", features = ["blocking"] }
serde = { version = "^1.0.114", features = ["derive"] }
serde_urlencoded = "^0.6.1"
serde_json = "^1.0.56"
url = "^2.1.1"
rand = "^0.7.3"
httparse = "^1.3.4"
strum = "^0.18.0"
strum_macros = "^0.18.0"
time = "^0.2.16"
regex = "^1.3.9"
webbrowser = "^0.5.5"
dirs = "^1.0.5"
anyhow = "^1.0"
thiserror = "1.0"
serde_yaml = "0.8"
termion = "1.5"
